--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.18.4",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3"
   }
 }
